--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "express": "^4.19.2",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
