--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
+    "nodemailer": "^6.9.15",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
