--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/runtime-core": "^3.4.38",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.20",
     "npm-run-all2": "^6.2.0",
+    "postcss": "^8.4.47",
     "prettier": "^3.2.5",
+    "sass": "^1.79.3",
+    "tailwindcss": "^3.4.12",
     "typescript": "~5.4.0",
     "vite": "^5.4.2",
     "vite-plugin-vue-devtools": "^7.3.1",
